--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lucene-solr (4.10.4-0ubuntu1) precise; urgency=low
+
+  * New upstream release
+
+ -- Admin Rémi Buisson <admin.rbuisson@LDC-ADMNUX01.cdbdx.biz>  Wed, 22 Jul 2015 07:23:51 +0000
+
 lucene-solr (4.10.2-0ubuntu2) trusty; urgency=low
 
   * Fix dpkg-statoverride when purging
