--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solr5 (5.5.1) stable; urgency=low
+
+  * New upstream release
+
+ -- Rémi BUISSON <remi.buisson@cdiscount.com>  Wed, 18 May 2016 13:36:31 +0200
+
 solr5 (5.5.0) stable; urgency=low
 
   * New upstream release
